# estudos

./: hello.py  pyproject.toml
.ipynb_checkpoints/: Implementacao-checkpoint.ipynb
